# cp_train

./: .gitmodules  pyproject.toml
cp_runner/: pyproject.toml
cp_runner/src/cp_runner/: __init__.py  array.py  cli.py  client.py  filesystem.py  model.py  model_cache.py
src/cp_train/: api.py  cli.py  cp_runner_invoker.py  filesystem.py  model.py  smoke_test.py  train.py  training_settings.toml
