[project]
name = "cp-train"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "cellpose[gui]<4",
    "torch==2.10.*",
    "torchvision==0.25.*",
    "typer>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []


[project.scripts]
cp_train = "cp_train.cli:main"
