[project]
name = "cp-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "cellpose-kit",
    "cellpose[gui]>=4",
    "progress-bar",
    "torch==2.10.*",
    "torchvision==0.25.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "cellpose_kit",
    "progress_bar",
]

[tool.uv.sources]
cellpose-kit = { workspace = true }
progress-bar = { workspace = true }
