[project]
name = "cp-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "cellpose[gui]>=4",
    "cellpose-kit",
    "torch==2.10.*",
    "torchvision==0.25.*",
    "typer>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "cellpose_kit",
]

[tool.uv.sources]
cellpose-kit = { workspace = true }

[dependency-groups]
dev = [
    "pandas>=3.0.1",
    "scikit-image>=0.26.0",
]
